0.83.5
  - Sound Blaster Pro emulation now maps DSP commands
    0x41 to 0x47 as aliases of 0x40 (set time constant)
    to support broken demoscene code that uses 0x41
    in that way. Yes, such code would obviously break
    on clone cards and the SB16. Added dosbox.conf
    option to turn it off for debugging. Alias is
    documented on Vogons forums where someone made
    a SB Pro clone card.
  - Fixed the issue with CD audio play by porting the
    audio code from DOSBox ECE. (Wengier)
  - COPY command now assumes /Y automatically when
    running in the batch file or with CALL command
    (or COMMAND /C) as in real DOS. (Wengier)
  - Normal core: REP MOVSD now checks segment limits
    for ES:(E)DI and throws a GP fault if exceeded.
    Demoscene productions marked as using VESA BIOS
    modes and scribbling on the VGA BIOS are relying
    on segment limits and GP faults to fake a linear
    framebuffer.
  - Added option to allow disabling the VESA BIOS
    window number range check when called on to
    bank switch. Needed for "Pill" by Opiate in the
    end credits, which for some reason requires a
    call for window number 0xFFFF to succeed in order
    to draw credits without glitching.
  - Added option to instruct VESA BIOS to ignore
    bank switching window parameter when asked to
    get/set bank switching window setting. Needed for
    some old demoscene and game applications that
    assume Window B is available, and will not render
    SVGA properly without it.
  - Added config option "quit warning" to indicate if
    DOSBox-X should warn show a warning message when
    you try to close the DOSBox-X window. If set to
    "auto" (default), DOSBox-X will warn only if at
    least one file handle is still open, or you are
    currently running a guest system. (Wengier)
  - DOSBox-X will allow control characters 8, 9, and
    27 in the batch file without warnings. (Wengier)
  - Add command-line option "-defaultdir" to specify